--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i><input type="number" name="total_family_guests" class="" min="0"
                                                                   max="6"
-                                                                  placeholder="Супруг(а) или дети"
+                                                                  placeholder="Супруг(а) или дети, кол-во"
                                                                   required>
                             </div>
                         </div>
